--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/assets/fonts/avenir-next.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <script src="/assets/js/vue.min.js"></script>
