--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <h1>Donate to Academus</h1>
 
           <p>
-            We're a small team of 4 high school and college students that work on Academus in our free time. We do our best to bring you frequent updates and keep uptime to a maximum, but unfortunately time is against us in many cases.
+            We're a small team of 6 high school and college students that work on Academus in our free time. We do our best to bring you frequent updates and keep uptime to a maximum, but unfortunately time is against us in many cases.
           </p>
 
           <p>
@@ -29,27 +29,37 @@
             If you share our goal of making education technology suck less or simply really enjoy the app, please consider donating. If you do, we will be forever grateful. If you choose not to, that's okay as well &mdash; as students ourselves, we understand how it feels to be strapped for cash.
           </p>
 
+          <a href="#donate" class="button-big skip-to-donate">Donate</a>
+
           <p>
             Thank you,<br>
             The Academus Team
           </p>
 
           <div class="section group team-heads">
-            <div class="col span_1_of_4">
+            <div class="col span_1_of_6">
               <div class="team-head pasha"></div>
               Pasha
             </div>
-            <div class="col span_1_of_4">
+            <div class="col span_1_of_6">
               <div class="team-head tj"></div>
               TJ
             </div>
-            <div class="col span_1_of_4">
+            <div class="col span_1_of_6">
               <div class="team-head ryan"></div>
               Ryan
             </div>
-            <div class="col span_1_of_4">
-              <div class="team-head justin"></div>
+            <div class="col span_1_of_6">
+            <div class="team-head justin"></div>
               Justin
+            </div>
+            <div class="col span_1_of_6">
+              <div class="team-head cayla"></div>
+              Cayla
+            </div>
+            <div class="col span_1_of_6">
+              <div class="team-head james"></div>
+              James
             </div>
           </div>
 
@@ -57,7 +67,8 @@
             P.S. If you want to support us but also get something in return, you can subscribe to <a href="https://blog.academus.io/scholar" target="_blank">Academus Scholar</a> or buy some <a href="https://merch.academus.io" target="_blank">Academus merch</a>. All profits from these will be put back into developing Academus.
           </p>
         </div>
-        <div class="col span_2_of_6">
+        
+        <div class="col span_2_of_6" id="donate">
           <div class="donate-box" id="donate-box">
             <h3>Support Us</h3>
 
